# optitrack

./: CMakeLists.txt  README.md
cmake/: FindOptiTrackSDK.cmake
src/: CMakeLists.txt  main.cpp  optitrack.cpp  optitrack.h
